--- a/index.html
+++ b/index.html
@@ -5,23 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Meme-Generator</title>
 </head>
 
 <body onload="init()">
     <div class="img-gallery-container flex">
-        <div class="img">
+        <!-- <div class="img">
             <img src="assests/barka-obama-meme.jpeg" alt="">
         </div>
         <div class="img">
             <img src="/assests/chad-meme.png" alt="">
         </div>
         <div class="img"><img src="/assests/jim_halpert-meme.jpeg" alt="">
-        </div>
+        </div> -->
     </div>
     <canvas class="canvas" width="500 " height="500"></canvas>
-    <script src="/js/main.js"></script>
+    <div class="tools">
+        <input type="text" name="text" placeholder="enter a text">
+        <button name="addText" onclick="onAddLineText()">add text</button>
+        <input type="color" name="color" onchange="onChangeColor(this)" >
+        <button name="fontBig" onclick="onFontBig()">+</button>
+        <button name="fontSmall" onclick="onFontSmall()">-</button>
+
+    </div>
+    <script src="js/galleryController.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/memeService.js"></script>
+    <script src="js/memeController.js"></script>
 </body>
 
 </html>
