--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             </div>
         </div>
     </div>
+    <footer class="my-footer">Emilio's Meme-Generator &#169;</footer>
     <script src="js/galleryController.js"></script>
     <script src="js/main.js"></script>
     <script src="js/memeService.js"></script>
