**added -drag and drop -text alignment -remove text -design

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                     <input type="color" name="colorStroke" onchange="onStrokeChangeColor(this.value)">
                     <button name="fontBig" onclick="onFontBig()"><img src="assests/icons/increase font - icon.png" alt=""></button>
                     <button name="fontSmall" onclick="onFontSmall()"><img src="assests/icons/decrease font - icon.png" alt=""></button>
+                    <button onclick="onSetTextAlign('left')"><img src="assests/icons/align-to-right.png" alt=""></button>
+                    <button onclick="onSetTextAlign('center')"><img src="assests/icons/center-text-alignment.png" alt=""></button>
+                    <button onclick="onSetTextAlign('right')"><img src="assests/icons/align-to-left.png" alt=""></button>
                 </div>
                 <div class="tool-four">
 
